# Pattern-recognition-and-inductive-modeling

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/notebooks/: Lab1.ipynb
backend/src/: server.py  settings.py
backend/src/auto_ml/: base.py  pure.py  tpot.py
