[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Vladislav Novikov <mb1te.comics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
tpot = "^0.11.7"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
pylama = {extras = ["all"], version = "^8.4.1"}


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylama = "^8.4.1"
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylama]
linters = "eradicate,mccabe,mypy,pycodestyle,pyflakes,pylint"
ignore = "C0103,C0114,C0115,C0116"